--- a/frontend/app/components/monitoring-object/monitoring-object.component.html
+++ b/frontend/app/components/monitoring-object/monitoring-object.component.html
@@ -8,7 +8,7 @@
 
   <div class="flex-container" id="object">
     <div id="monitoring-map-container" class="cadre">
-      <pnx-monitoring-map *ngIf="heightMap" [obj]="obj" [bEdit]="bEdit" [objForm]="objForm"
+      <pnx-monitoring-map *ngIf="heightMap && listService.listType" [obj]="obj" [bEdit]="bEdit" [objForm]="objForm"
         [(selectedObject)]="selectedObject" [(pre_filters)]="pre_filters" [(filters)]="filters"
         [(objectListType)]="objectListType"
         [heightMap]="heightMap"></pnx-monitoring-map>
